# thjread-blog

./: .gitignore  CNAME  README.md  about.markdown  blog.cabal  contact.markdown  index.html  robots.txt  site.hs  stack.yaml
.circleci/: config.yml
about/: about.html  contact.html  this-site.html
css/: default.css
diagrams-orig/: lim-comm-lim.kra  lim-comm-lim.kra~  omega-homotopy-groups.kra
mathjax-prerender/: mathjax-prerender.js  package-lock.json  package.json
pages/: about.markdown  contact.markdown
posts/: 2020-03-01-algebraic-tangent-spaces.markdown  2020-03-05-algebraic-tangent-spaces.markdown  2020-03-09-getting-started-category-theory.markdown  2020-04-04-limits-commute.markdown  2020-04-15-limits-commute.markdown  2020-06-18-covariant-derivative.markdown  2020-06-30-creative-perspective.markdown  2020-07-01-creative-perspective.markdown  2020-08-01-quasi-categories.markdown  2020-08-01-quasicategories.markdown  2020-08-04-quasi-categories.markdown  2020-09-18-algebraic-theories.markdown  2020-09-25-rigour-research.markdown  2020-10-14-algebraic-theories-talk.markdown  2020-12-31-ways-of-thinking-research.markdown  2021-01-01-ways-of-thinking-research.markdown  2021-07-01-learn-homotopy-colimits.markdown  2021-09-01-learn-homotopy-colimits.markdown  2021-12-04-kombu-iodine.markdown  2022-04-25-kombu-iodine.markdown  2022-06-03-why-sequential-spectra.markdown  2022-10-03-why-sequential-spectra.markdown
templates/: archive.html  default.html  mathjax-options.js  post.html  rss-description.html  sitemap.xml  teaser-post-list.html
